--- a/healthconnect/apps/doctors/templates/doctor_services.html
+++ b/healthconnect/apps/doctors/templates/doctor_services.html
@@ -17,7 +17,7 @@ Doctor Services
         <div>
             <h3>Manage Upcoming Appointments</h3>
             <p>Easily book appointments with our medical professionals through our user-friendly scheduling system.</p>
-            <button onclick="location.href='{% url 'book_appointment' %}'">Manage Appointment</button>
+            <button onclick="location.href='{% url 'book_appointment' %}'">Manage</button>
         </div>
     </li>
     <li class="service-item">
@@ -25,7 +25,7 @@ Doctor Services
         <div>
             <h3>Update Patient Records</h3>
             <p>Access your medical records securely and conveniently online, ensuring you have all your health information at your fingertips.</p>
-            <button onclick="location.href='{% url 'list_patients' %}'">Update Records</button>
+            <button onclick="location.href='{% url 'list_patients' %}'">Update</button>
         </div>
     </li>
     <li class="service-item">
