--- a/healthconnect/apps/patients/templates/select_doctor.html
+++ b/healthconnect/apps/patients/templates/select_doctor.html
@@ -1,11 +1,25 @@
-<h2>Select Your Primary Doctor</h2>
-<form method="POST">
-    {% csrf_token %}
-    <label for="doctor">Choose a doctor:</label>
-    <select name="doctor_id" id="doctor">
-        {% for doctor in doctors %}
-            <option value="{{ doctor.user_id }}">{{ doctor.user.first_name }} {{ doctor.user.last_name }}</option>
-        {% endfor %}
-    </select>
-    <button type="submit">Select Doctor</button>
-</form>
+{% extends "layout.html" %}
+{% load static %}
+
+{% block extra_styles %}
+    <link rel="stylesheet" href="{% static 'css/select_doctor.css' %}">
+{% endblock %}
+
+{% block title %}Select Doctor{% endblock %}
+{% block content %}
+    <main>
+        <div class="container">
+            <h2>Select Your Primary Doctor</h2>
+            <form class="doc_form" method="POST">
+                {% csrf_token %}
+                <label for="doctor">Choose a doctor:</label>
+                <select name="doctor_id" id="doctor">
+                    {% for doctor in doctors %}
+                        <option value="{{ doctor.user_id }}">{{ doctor.user.first_name }} {{ doctor.user.last_name }}</option>
+                    {% endfor %}
+                </select>
+                <button type="submit">Select Doctor</button>
+            </form>
+        </div>
+    </main>
+{% endblock %}
