--- a/healthconnect/static/css/services.css
+++ b/healthconnect/static/css/services.css
@@ -37,7 +37,7 @@ button {
     font-family: 'Poppins', sans-serif;
     padding: 10px 20px;
     border: none;
-    background-color: #aaaaaa; 
+    background-color: #007bff; 
     color: white; 
     border-radius: 5px; 
     cursor: pointer; 
