--- a/healthconnect/apps/doctors/templates/doctor_services.html
+++ b/healthconnect/apps/doctors/templates/doctor_services.html
@@ -17,7 +17,7 @@ Doctor Services
         <div>
             <h3>Manage Upcoming Appointments</h3>
             <p>Easily book appointments with our medical professionals through our user-friendly scheduling system.</p>
-            <button onclick="location.href='{% url 'book_appointment' %}'">Manage</button>
+            <button onclick="location.href='{% url 'manage_appointments' %}'">Manage</button>
         </div>
     </li>
     <li class="service-item">
