patient view prescriptions

--- a/healthconnect/apps/patients/templates/patient_services.html
+++ b/healthconnect/apps/patients/templates/patient_services.html
@@ -34,9 +34,9 @@ Patient Services
             <li class="service-item">
                 <img src="{% static 'images/pharmacy_icon.webp' %}" alt="Pharmacy Icon" class="service-icon">
                 <div>
-                    <h3>Pharmacy</h3>
-                    <p>Access free drugs.</p>
-                    <button onclick="location.href='{% url 'medical_history' %}'">View Medical History</button>
+                    <h3>View Perscriptions</h3>
+                    <p>View your current prescriptions and request refills if needed</p>
+                    <button onclick="location.href='{% url 'view_prescriptions' %}'">View Prescriptions</button>
                 </div>
             </li>
         </ul>
