Fixed pharmacy link on services page

--- a/healthconnect/apps/patients/templates/patient_services.html
+++ b/healthconnect/apps/patients/templates/patient_services.html
@@ -36,7 +36,7 @@ Patient Services
                 <div>
                     <h3>Pharmacy</h3>
                     <p>Access free drugs.</p>
-                    <button onclick="location.href='{% url 'medical_history' %}'">View Medical History</button>
+                    <button onclick="location.href='{% url 'pharmacy' %}'">View Perscriptions</button>
                 </div>
             </li>
         </ul>
